[package]
name = "deno_lint-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
deno_ast = "*"

[dependencies.deno_lint]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "lint"
path = "fuzz_targets/lint.rs"
test = false
doc = false

[profile.release]
debug = true
